# Model-Training

./: .coverage  .gitignore  .pylintrc  README.md  bandit.yaml  dvc.yaml  pyproject.toml  report.txt  requirements.txt
.dvc/: config
.github/workflows/: linters.yml  testing.yml
data/: .gitignore  test.txt.dvc  train.txt.dvc  val.txt.dvc
src/: imports.py
src/data/: get_data.py  model_definition.py  params.py  process_data.py  tokenizer.py
src/features/: process_data.py
src/models/: model_definition.py  model_params.py  predict.py  train.py
src/prediction/: predict.py
src/training/: train.py
test/: .coverage  test_data_slicing.py  test_get_data.py  test_model.py  test_model_monitoring.py  test_process_features.py
