[tool.poetry]
name = "remla-team5"
version = "0.1.0"
description = "REMLA 2024 assignment 1 model"
authors = ["Saga <sagakudungur@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
keras = "^3.3.3"
matplotlib = "^3.8.4"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
seaborn = "^0.13.2"
tensorflow = "^2.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
