[tool.poetry]
name = "remla-team5"
version = "0.1.0"
description = "REMLA 2024 assignment 1 model"
authors = ["Saga <sagakudungur@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.26.4"
keras = ">=2.15.0,<2.16"
matplotlib = "^3.8.4"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
seaborn = "^0.13.2"

# Issue between poetry and tensorflow metadata since >=2.11
# This is a temporary workaround
# related to https://github.com/python-poetry/poetry/issues/8271
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "2.15.0"
tensorflow-intel = {version="^2.15.0", platform = "win32"}

dvc = "3.50.1"
dvc-gdrive = "3.0.1"
dslinter = "2.0.9"
bandit = "^1.7.8"
gdown = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
