[tool.poetry]
name = "remla-team5"
version = "0.1.0"
description = "REMLA 2024 assignment 1 model"
authors = ["Saga <sagakudungur@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.26.4"
keras = ">=2.15.0,<2.16"
matplotlib = "^3.8.4"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
seaborn = "^0.13.2"
pytest =  "^8.2.1"
pytest-cov = "^1.7.0"

dvc = "3.50.1"
dvc-gdrive = "3.0.1"
dslinter = "2.0.9"
bandit = "^1.7.8"
gdown = "^5.1.0"
lib-ml = {git = "https://github.com/REMLA24-Team-5/lib-ml", rev = "v0.1.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
